[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "time-tracker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
]

[project.scripts]
time-tracker = "app:main"

[tool.setuptools]
py-modules = ["app", "db"]
