[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "time-tracker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
]

[project.scripts]
time-tracker = "time_tracker.app:main"

[tool.setuptools.packages.find]
include = ["time_tracker*"]
